# unit27-handoff-engine

./: .gitignore  DESIGN_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: proof_cases.json
examples/sample-project/: README.md  context_report.json
examples/sample-project/evals/: proof_cases.json
examples/sample-project/u27/: HANDOFF_PACKET.md  handoff.json
scripts/: verify_wheel.py
src/handoff_engine/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
u27/: BOUNDARY_REGISTER.md  HANDOFF_PACKET.md  PROOF_PACKET.md  boundary_report.json  context_manifest.md  context_report.json  handoff.json  proof_ledger.json
u27/evidence/: run-0001.txt  run-0002.txt  run-0003.txt  run-0004.txt  run-0005.txt  run-0006.txt  run-0007.txt
