[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unit27-handoff-engine"
version = "0.1.0"
description = "Unit27 public field kit for generating agent-ready handoff packets from objectives and context."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Unit27 Research" }
]
keywords = ["ai", "agents", "cli", "handoff", "research-infrastructure", "unit27"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Documentation"
]

[project.scripts]
handoff-engine = "handoff_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
